<resources>
    <string name="app_title">Simple Weather</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_weather_details">Weather Details</string>

    <string name="last_update_format">Last update: %s</string>
    <string name="location_name_format">%1$s, %2$s</string>
    <string name="feels_like_format">Feels like %s</string>
    <string name="temperature_c_format">%d°C</string>
    <string name="temperature_f_format">%d°F</string>
    <string name="percent_format">%d\%%</string>
    <string name="kmh_format">%.1f km/h</string>
    <string name="km_format">%.1f km</string>
    <string name="mph_format">%.1f m/h</string>
    <string name="miles_format">%.1f miles</string>
    <string name="pressure_mbar_format">%.1f mbar</string>

    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>

    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="index_uv">Index UV</string>

    <string name="error_network">Please check your internet connection or enable WiFi/mobile data.</string>
    <string name="error_generic_format">An error has occurred for the following reason:\n%s</string>
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="action_try_again">Try Again</string>
    <string name="today">Today</string>

    <string name="favorites_empty_hint">No added favorites.\nPress + to search and add new one</string>

    <string name="search_hint">Search</string>
    <string name="location_already_added_to_favorites">This location has already added to favorites</string>
    <string name="favorites_header">Favorites</string>
    <string name="search_results_header">Search Results</string>
    <string name="no_search_results">No Search Results</string>

    <string name="title_settings">Settings</string>
    <string name="settings_temperature_units">Temperature Units</string>
    <string name="settings_speed_or_distance_units">Speed/Distance Units</string>
    <string name="settings_temperature_c">°C</string>
    <string name="settings_temperature_f">°F</string>
    <string name="settings_distance_km">kilometers</string>
    <string name="settings_distance_miles">miles</string>

    <!--  transition names  -->
    <string name="transition_fab_add_favorite" translatable="false">add_favorite</string>

</resources>