<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIconTint="?colorControlNormal"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/title_settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/settingTempUnits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_temperature_units"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/settingTempUnitsValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textAppearance="?textAppearanceBody2"
                            android:textColor="@color/colorAccent"
                            tools:text="@string/settings_temperature_c" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/settingDistanceUnits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_speed_or_distance_units"
                            android:textAppearance="?textAppearanceBody1" />

                        <TextView
                            android:id="@+id/settingDistanceUnitsValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textAppearance="?textAppearanceBody2"
                            android:textColor="@color/colorAccent"
                            tools:text="@string/settings_distance_km" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buildInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:textAppearance="?textAppearanceCaption"
                tools:text="0.0.1" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>